# pcc_src

./: build_device_code.sh  meson.build
device/: pcc_dev_main.c
device/algo/: rtt_template.c  rtt_template.h
host/: pcc.c  pcc_core.c  pcc_core.h
